src/App.css
@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Nunito:wght@300;400;600;700;800;900&family=Russo+One&family=Spartan:wght@700;800;900&display=swap");

body {
    font-family: "Nunito", sans-serif;
    margin: 0 32px;
    background-color: #1d1c1f;
    color: white;
}

main {
    max-width: 900px;
    margin-inline: auto;
}

* {
    box-sizing: border-box;
}

.expense-tracker {
    display: flex;
    gap: 32px;
}

.expense-form {
    width: 100%;
}

.expense-table {
    width: 100%;
    border-collapse: collapse;
    border: 1px solid rgb(91, 89, 89);
}

.expense-table select {
    font: inherit;
    width: 100%;
    border: none;
    outline: none;
    color: white;
    background-color: #333234;
}

.amount-column div {
    display: flex;
}

.amount-column span {
    margin-right: 6px;
}

.title-column div {
    display: flex;
}

.title-column span {
    margin-right: 6px;
}

svg {
    fill: white;
}

.arrow {
    transition: transform 0.2s ease-in-out;
    cursor: pointer;
    overflow: hidden;
    width: 31px;
    height: 20px;
}

.up-arrow {
    margin-left: auto;
}

.up-arrow:active {
    transform: translateY(-2px);
}

.down-arrow {
    margin-left: 6px;
}

.down-arrow:active {
    transform: translateY(2px);
}

.reset-arrow {
    margin-left: 6px;
}

.reset-arrow:active {
    transform: translateY(2px);
}

.expense-table th,
.expense-table td {
    text-align: left;
    padding: 4px 8px;
    border: 1px solid rgb(91, 89, 89);
    background-color: #333234;
}

.select-category {
    height: 28px;
    padding: 1px 2px;
    font: inherit;
    color: white;
    border: 1px solid rgb(91, 89, 89);
    background-color: #333234;
}

.input-container {
    display: flex;
    flex-direction: column;
    margin-bottom: 30px;
    position: relative;
}

.input-container label {
    font-size: 14px;
}

.input-container input {
    height: 28px;
    font-family: inherit;
    color: white;
    background-color: #333234;
    border: 1px solid rgb(91, 89, 89);
}

.add-btn {
    width: 100%;
    height: 32px;
    font-size: 18px;
    font-family: inherit;
    margin-top: 8px;
    color: white;
    background-color: #755893;
    border: 1px solid rgb(91, 89, 89);
    cursor: pointer;
}

.context-menu {
    background-color: #1d1c1f;
    border: 1px solid;
    position: absolute;
    border-radius: 4px;
    overflow: hidden;
    border: 1px solid rgb(91, 89, 89);
    /* display: none; */
    top: 0;
    left: 0;
}

.context-menu div {
    padding: 2px 8px;
    cursor: pointer;
    font-weight: 600;
    border: 1px solid rgb(91, 89, 89);
}

.context-menu div:hover {
    background-color: #755893;
}

.error {
    color: #ed4141;
    margin: 0;
    font-size: 12px;
    top: 100%;
    position: absolute;
}

.reset-sort {
    cursor: pointer;
}

@media (max-width: 900px) {
    body {
        margin-inline: 16px;
    }

    .expense-tracker {
        flex-direction: column;
    }
}

